<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SprintDict</string>
    <string name="manage_dictionaries">SprintDict - Manage Dictionaries</string>
    <string name="activity_settings">SprintDict - Settings</string>
    <string name="search_hint">Search a word in SprintDict</string>
    <string name="search">Search</string>
    <string name="menu_recent_history">Recent History</string>
    <string name="menu_recent_history_clear">Clear Recent History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_find_on_page">Find On Page</string>
    <string name="menu_manage_dictionaries">Manage Dictionaries</string>
    <string name="menu_dict_path">Path To Dictionaries</string>
    <string name="menu_rebuild_index">Rebuild index</string>
    <string name="set_dict_path">SprintDict - Set Dictionaries Path</string>
    <string name="prompt_to_set_path">No dictionaries path is set.\nWould you like to select one now?</string>
    <string name="yes">Yes</string>
    <string name="set_path">Set Path</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="dict_manager_hint">Select dictionaries to enable them</string>
    <string name="dict_path_saved_msg">Your selected path is saved.</string>
    <string name="dict_path_not_saved_msg">Cannot save the selected path.</string>
    <string name="enabled_dicts_saved">SUCCESS. Selected dictionaries are enabled.</string>
    <string name="enabled_dicsts_not_saved">FAILURE. Selected dictionaries are not enabled. Try again.</string>
    <string name="enabled_dicts">Enabled Dictionaries</string>
    <string name="rebuilding_index_progress">Rebuilding index&#8230;%1$d/%2$d</string>
    <string name="rebuilding_index_success">Finished building dictionary indexes</string>
    <string name="dictionary_title">Dictionary Title</string>
    <string name="article_title">Article Title</string>
    <string name="definitions_body">Definitions Body</string>
    <string name="nothing_found">Nothing found!</string>
    <string name="searching">Searching&#8230;</string>
    <string name="pref_dict_path">Path To Dictionaries</string>
    <string name="pref_dict_title_font_size">Dictionary Title Font Size</string>
    <string name="pref_article_title_font_size">Article Title Font Size</string>
    <string name="pref_definitions_font_size">Definitions Font Size</string>
    <string name="no_matches_found">No matches found!</string>
    <string name="no_more_matches_found">No more matches found!</string>
    <string name="title_activity_recent_history">Recent History</string>
    <string name="move_up">Move Up</string>
    <string name="menu_expand_all">Expand All</string>
    <string name="menu_collapse_all">Collapse All</string>
    <string name="search_description">Words and phrases</string>
    <string name="updating_view">Updating View&#8230;</string>
    <string name="dict_cannot_be_indexed">%s dictionary cannot be indexed. Please, report to developers.</string>
    <string name="sprint_dict_indexing_notification">Indexing dictionaries</string>
    <string name="parsing_definitions">Parsing definitions…</string>
    <string name="find_on_page_hint">Find on page</string>
    <string name="find_on_page_next">Next</string>
    <string name="find_on_page_previous">Previous</string>
    <string name="find_on_page_close">Close</string>
    <string name="definitions_expander_icon_description">Definitions expander icon.</string>
    <string name="context_menu_copy">Copy</string>
    <string name="context_menu_share">Share</string>
    <string name="share_via">Share via</string>
    <string name="menu_change_dict_name">Change dictionary name</string>
    <string name="change_dict_name_dialog_title">Change dictionary name</string>
    <string name="cancel">Cancel</string>
</resources>
