...
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        android:src="@drawable/expander_ic_minimized" />

    <TextView
        android:id="@+id/dict_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/expander_icon"
        android:background="@color/black"
        android:clickable="true"
        android:paddingTop="10dp"
...
